--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <picture class="main-image">
                     <img class="hide" src="#" alt="user-image -- will be background Image -- left image tag for seo " />
                 </picture>
-                <p class="info-text"> I am a Front-End-Dev and this is my git, stay tuned for more on this matter.
+                <p class="info-text"> I am a Front-End-Dev and this is my git. Stay tuned for more on this matter.
                 </p>
             </article>
         </section>
