--- a/index.html
+++ b/index.html
@@ -32,10 +32,15 @@
                 <picture class="main-image">
                     <img class="hide" src="#" alt="user-image -- will be background Image -- left image tag for seo " />
                 </picture>
-                <p class="info-text"> I am a Front-End-Dev and this is my git. Stay tuned for more on this matter.
+                <p class="info-text"> I am a Front-End-Dev and this is my git. Stay tuned for further updates.
                 </p>
             </article>
         </section>
+
+        <section id="sandbox" class="randomBox"></section>
+        <div class="container">
+            <img width="75%" class="screen" >
+          </div>
 
     </div>
 
