--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>David Grant</title>
+    <link rel="stylesheet" href="css/resetStyles.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="js/app.js"></script>
@@ -12,7 +13,7 @@
 
 <body class="mainStyles">
     <div class="main-container">
-        <header class="header-container">
+        <header class="header-container sections">
             <article class="logo-wrapper">
                 <section class="logo">
                     <p class="title">David
@@ -20,17 +21,10 @@
                     </p>
                     <p class="sub-title">U.I Engineer</p>
                 </section>
-                <section class="logo shadow">
-                    <p class="title">David
-                        <span class="side-sub">Grant</span>
-                    </p>
-                    <p class="sub-title">U.I Engineer</p>
-                </section>
             </article>
-
         </header>
-        <section class="body-container">
-            <article class="info-wrapper">
+        <section class="body-container sections">
+            <article class="info-wrapper ">
                 <picture class="main-image">
                     <img class="" src="images/toonMe.jpg" alt="user-image" />
                 </picture>
@@ -38,24 +32,29 @@
                 </p>
             </article>
             <article class="info-wrapper">
-                <ul class="social-icons">
+                <ul class="social-icons sections">
                     <li class="item">
                         <a href="https://www.linkedin.com/in/david-grant-2b3295b3/" target="_blank">
-                            <svg height="67px" id="Layer_1" style="enable-background:new 0 0 67 67;" version="1.1" viewBox="0 0 67 67"
-                                width="67px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <svg class="linked-in" height="48px" id="Layer_1" style="enable-background:new 0 0 67 67;" version="1.1" viewBox="0 0 67 67"
+                                width="48px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                 <path d="M50.837,46.137V34.425c0-6.274-3.35-9.194-7.816-9.194  c-3.604,0-5.219,1.982-6.119,3.373V25.71h-6.79c0.09,1.917,0,20.428,0,20.428h6.79V34.729c0-0.61,0.044-1.22,0.224-1.657  c0.49-1.22,1.607-2.482,3.482-2.482c2.458,0,3.44,1.874,3.44,4.618v10.929H50.837z M22.959,22.922c2.367,0,3.842-1.569,3.842-3.531  c-0.044-2.003-1.475-3.528-3.797-3.528s-3.841,1.525-3.841,3.528c0,1.962,1.474,3.531,3.753,3.531H22.959z M26.354,46.137V25.71  h-6.789v20.427H26.354z M33.5,1l28.146,16.25v32.5L33.5,66L5.354,49.75v-32.5L33.5,1z"
                                     style="fill-rule:evenodd;clip-rule:evenodd;fill:#007AB9;" />
                             </svg>
                         </a>
 
                     </li>
+                    <li class="item">
+                        <a href="https://github.com/drGrant" target="_blank">
+                            <svg class="gitHub" height="48"  width="48" class="octicon octicon-mark-github" viewBox="0 0 16 16" version="1.1"
+                                aria-hidden="true">
+                                <path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
             </article>
-            
         </section>
-
     </div>
-
 </body>
 
 </html>
